feat: publish release candidate

--- a/packages/react/Stack/tsconfig.json
+++ b/packages/react/Stack/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": ".",
     "declaration": false,
     "paths": {
+      "@nimbus-ds/box": ["../Box/src"],
       "@nimbus-ds/styles": ["../../styles/src"]
     }
   }
