--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,31 @@
     "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
-      "@nimbus-ds/tokens": ["./packages/tokens"],
-      "@nimbus-ds/styles": ["./packages/styles/src"]
+      "@nimbus-ds/tokens": ["./packages/tokens/dist"],
+      "@nimbus-ds/badge": ["./packages/react/Badge/src"],
+      "@nimbus-ds/box": ["./packages/react/Box/src"],
+      "@nimbus-ds/button": ["./packages/react/Button/src"],
+      "@nimbus-ds/checkbox": ["./packages/react/Checkbox/src"],
+      "@nimbus-ds/chip": ["./packages/react/Chip/src"],
+      "@nimbus-ds/icon": ["./packages/react/Icon/src"],
+      "@nimbus-ds/icon-button": ["./packages/react/IconButton/src"],
+      "@nimbus-ds/input": ["./packages/react/Input/src"],
+      "@nimbus-ds/label": ["./packages/react/Label/src"],
+      "@nimbus-ds/Link": ["./packages/react/Link/src"],
+      "@nimbus-ds/list": ["./packages/react/List/src"],
+      "@nimbus-ds/popover": ["./packages/react/Popover/src"],
+      "@nimbus-ds/radio": ["./packages/react/Radio/src"],
+      "@nimbus-ds/select": ["./packages/react/Select/src"],
+      "@nimbus-ds/skeleton": ["./packages/react/Skeleton/src"],
+      "@nimbus-ds/spinner": ["./packages/react/Spinner/src"],
+      "@nimbus-ds/stack": ["./packages/react/Stack/src"],
+      "@nimbus-ds/tag": ["./packages/react/Tag/src"],
+      "@nimbus-ds/text": ["./packages/react/Text/src"],
+      "@nimbus-ds/textarea": ["./packages/react/TextArea/src"],
+      "@nimbus-ds/title": ["./packages/react/Title/src"],
+      "@nimbus-ds/toast": ["./packages/react/Toast/src"],
+      "@nimbus-ds/toggle": ["./packages/react/Toggle/src"],
+      "@nimbus-ds/tooltip": ["./packages/react/Tooltip/src"]
     }
   }
 }
