Fixed paths unit tests and paths storybook (#46)
* fix: fixed paths unit tests and paths storybook

* feat: add turborepo

--- a/.github/workflows/publish-codecov.yml
+++ b/.github/workflows/publish-codecov.yml
@@ -37,10 +37,10 @@ jobs:
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
         run: yarn
 
-      - name: Run build
+      - name: Run build styles
         run: |
           export NODE_OPTIONS="--max_old_space_size=4096" 
-          yarn build:essentials
+          yarn build:styles
 
       - name: Run tests
         run: yarn test:ci
