--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,10 +30,10 @@ jobs:
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
         run: yarn
 
-      - name: Run build
+      - name: Run build styles
         run: |
           export NODE_OPTIONS="--max_old_space_size=4096" 
-          yarn build:essentials
+          yarn build:styles
 
       - name: Run lint
         run: yarn lint
