feat: configuration turborepo

--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build
         run: |
           export NODE_OPTIONS="--max_old_space_size=4096"
-          yarn build
+          npm run build:turbo
 
       - name: build storybook
         run: yarn build:storybook
