--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
-    "build": {}
+    "build:styles": {},
+    "build": {
+      "dependsOn": ["^build:styles"]
+    }
   }
 }
