feat: configuration turborepo

--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     ]
   },
   "scripts": {
-    "build": "yarn clean && turbo run build --filter=[origin/master]...",
+    "build": "yarn clean && yarn build:styles && yarn build:essentials && turbo run build --filter=[origin/master]...",
     "build:styles": "turbo run build --filter=@nimbus-ds/styles...",
-    "build:old": "yarn clean && yarn build:styles && yarn build:essentials && yarn build:packages",
-    "build:essentials": "yarn workspaces foreach -pv -ptR --from '{@nimbus-ds/skeleton,@nimbus-ds/text,@nimbus-ds/badge,@nimbus-ds/spinner,@nimbus-ds/icon}' run build",
-    "build:packages": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude @nimbus-ds/tokens --exclude @nimbus-ds/styles --exclude @nimbus-ds/skeleton --exclude @nimbus-ds/text --exclude @nimbus-ds/badge --exclude @nimbus-ds/spinner --exclude @nimbus-ds/icon --exclude @nimbus-ds/box run build",
+    "build:essentials": "turbo run build --filter=@nimbus-ds/skeleton --filter=@nimbus-ds/text --filter=@nimbus-ds/badge --filter=@nimbus-ds/spinner --filter=@nimbus-ds/icon",
     "build:storybook": "build-storybook -c .storybook -o .build-storybook",
     "bump:check": "yarn version check",
     "bump:next": "yarn version apply --all --prerelease",
@@ -25,8 +23,8 @@
     "pre-commit": "lint-staged",
     "pre-push": "yarn test:coverage && yarn lint && yarn types:check",
     "prepare-husky": "husky install",
-    "publish:next": "yarn bump:next && npm run build:turbo && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
-    "publish:stable": "yarn bump:stable && npm run build:turbo && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public",
+    "publish:next": "yarn bump:next && npm run build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public --tag next",
+    "publish:stable": "yarn bump:stable && npm run build && yarn workspaces foreach -pv -pt --exclude nimbus-design-system npm publish --tolerate-republish --access public",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache",
     "storybook": "start-storybook -p 6006 --ci",
     "start:dev": "yarn storybook",
