--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,14 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
-    "build": {}
+    "build:styles": {
+      "dependsOn": ["^build:styles"]
+    },
+    "build:essentials": {
+      "dependsOn": ["^build:styles", "^build:essentials"]
+    },
+    "build": {
+      "dependsOn": ["^build:essentials", "^build"]
+    }
   }
 }
