--- a/packages/react/Thumbnail/package.json
+++ b/packages/react/Thumbnail/package.json
@@ -18,10 +18,10 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@tiendanube/icons": "^0.2.7",
     "@nimbus-ds/icon": "workspace:*",
     "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*"
+    "@nimbus-ds/styles": "workspace:*",
+    "@tiendanube/icons": "^0.2.7"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
