feat: add new component alert

--- a/.eslintrc
+++ b/.eslintrc
@@ -75,7 +75,8 @@
           "./packages/react/Toast",
           "./packages/react/Button",
           "./packages/react/Tooltip",
-          "./packages/react/Stack"
+          "./packages/react/Stack",
+          "./packages/react/Alert"
         ]
       }
     ],
