--- a/packages/react/Alert/tsconfig.json
+++ b/packages/react/Alert/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../../tsconfig.json",
   "include": ["./src"],
+  "exclude": ["src/**/*.spec.tsx", "src/**/*.stories.tsx"],
   "compilerOptions": {
     "baseUrl": ".",
     "declaration": false,
