--- a/packages/react/Card/package.json
+++ b/packages/react/Card/package.json
@@ -18,11 +18,8 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/icon": "workspace:*",
-    "@nimbus-ds/skeleton": "workspace:*",
     "@nimbus-ds/styles": "workspace:*",
-    "@nimbus-ds/text": "workspace:*",
-    "@tiendanube/icons": "^0.2.7"
+    "@nimbus-ds/title": "workspace:*"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -37,6 +34,11 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/box": "workspace:*",
+    "@nimbus-ds/button": "workspace:*",
+    "@nimbus-ds/stack": "workspace:*",
+    "@nimbus-ds/tag": "workspace:*",
+    "@nimbus-ds/text": "workspace:*",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
