--- a/packages/react/Card/package.json
+++ b/packages/react/Card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/card",
-  "version": "0.0.0",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -44,5 +44,6 @@
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "stableVersion": "0.0.0"
 }
