--- a/packages/react/Tag/package.json
+++ b/packages/react/Tag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/tag",
-  "version": "1.2.0",
+  "version": "1.2.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
