--- a/.eslintrc
+++ b/.eslintrc
@@ -68,6 +68,7 @@
           "./packages/styles",
           "./packages/tokens",
           "./packages/react/Skeleton",
+          "./packages/react/Sidebar",
           "./packages/react/Chip",
           "./packages/react/Tag",
           "./packages/react/Text",
