--- a/packages/react/Sidebar/package.json
+++ b/packages/react/Sidebar/package.json
@@ -18,8 +18,8 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/styles": "workspace:^",
-    "@nimbus-ds/title": "workspace:^"
+    "@nimbus-ds/styles": "workspace:*",
+    "@nimbus-ds/title": "workspace:*"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -34,10 +34,10 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/box": "workspace:^",
-    "@nimbus-ds/button": "workspace:^",
-    "@nimbus-ds/stack": "workspace:^",
-    "@nimbus-ds/text": "workspace:^",
+    "@nimbus-ds/box": "workspace:*",
+    "@nimbus-ds/button": "workspace:*",
+    "@nimbus-ds/stack": "workspace:*",
+    "@nimbus-ds/text": "workspace:*",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
