--- a/packages/react/Sidebar/package.json
+++ b/packages/react/Sidebar/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nimbus-ds/alert",
-  "version": "1.0.1-rc.1",
+  "name": "@nimbus-ds/sidebar",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,8 +18,6 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/icon": "workspace:*",
-    "@nimbus-ds/skeleton": "workspace:*",
     "@nimbus-ds/styles": "workspace:*",
     "@nimbus-ds/title": "workspace:*"
   },
@@ -36,12 +34,15 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/box": "workspace:*",
     "@nimbus-ds/button": "workspace:*",
+    "@nimbus-ds/stack": "workspace:*",
+    "@nimbus-ds/text": "workspace:*",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "stableVersion": "1.0.0"
+  "stableVersion": "0.0.0"
 }
