--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "jest-svg-transformer": "^1.0.0",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^2.7.0",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
