--- a/packages/react/Title/package.json
+++ b/packages/react/Title/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/title",
-  "version": "1.4.0",
+  "version": "1.5.0-rc.4",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -39,5 +39,6 @@
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "stableVersion": "1.4.0"
 }
