--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "4.17.0",
+  "version": "4.18.0-rc.4",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -37,5 +37,6 @@
     "ts-loader": "^9.4.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
-  }
+  },
+  "stableVersion": "4.17.0"
 }
