--- a/packages/react/Label/package.json
+++ b/packages/react/Label/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/label",
-  "version": "1.3.0",
+  "version": "1.4.0-rc.1",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
@@ -18,10 +18,8 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/icon": "workspace:*",
     "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*",
-    "@tiendanube/icons": "^0.3.1"
+    "@nimbus-ds/styles": "workspace:*"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -36,10 +34,13 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/icon": "workspace:*",
+    "@tiendanube/icons": "^0.3.1",
     "terser-webpack-plugin": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "stableVersion": "1.3.0"
 }
