--- a/packages/react/atomic/Skeleton/package.json
+++ b/packages/react/atomic/Skeleton/package.json
@@ -12,8 +12,8 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "yarn build:types && webpack",
-    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ../../../",
+    "build": "arn build:types && webpack",
+    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ./",
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
@@ -33,12 +33,9 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/webpack": "workspace:*",
     "@vanilla-extract/dynamic": "^2.0.2",
-    "@vanilla-extract/webpack-plugin": "^2.1.11",
-    "terser-webpack-plugin": "^5.3.5",
-    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack": "^5.74.0"
   }
 }
