refactor: changed build build to consume inner package @nimbus-ds/webpack in component Skeleton

--- a/packages/react/atomic/Skeleton/package.json
+++ b/packages/react/atomic/Skeleton/package.json
@@ -12,7 +12,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "arn build:types && webpack",
+    "build": "yarn build:types && webpack",
     "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ./",
     "clean": "rm -rf dist",
     "version": "yarn version"
