refactor: changed build build to consume inner package @nimbus-ds/webpack in package styles

--- a/packages/core/styles/tsconfig.json
+++ b/packages/core/styles/tsconfig.json
@@ -7,7 +7,13 @@
     "module": "esnext",
     "declarationDir": "./dist",
     "paths": {
-      "@nimbus-ds/tokens": ["../../tokens"]
+      "@nimbus-ds/tokens": ["../tokens"],
+      "@nimbus-ds/webpack": ["../webpack"]
+    }
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonJS"
     }
   }
 }
