--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -28,14 +28,14 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/webpack": "workspace:*",
+    "@types/glob": "^8",
     "@vanilla-extract/css": "^1.9.2",
     "@vanilla-extract/recipes": "^0.3.0",
     "@vanilla-extract/sprinkles": "^1.5.1",
-    "@vanilla-extract/webpack-plugin": "^2.2.0",
-    "mini-css-extract-plugin": "^2.7.0",
+    "glob": "^8.0.3",
     "rainbow-sprinkles": "^0.14.0",
-    "ts-loader": "^9.4.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "ts-node": "^10.9.1",
+    "webpack": "^5.75.0"
   }
 }
