--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,9 @@
     "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
-      "@nimbus-ds/tokens": ["packages/core/tokens/dist"],
+      "@nimbus-ds/tokens": ["./packages/core/tokens/dist"],
+      "@nimbus-ds/styles": ["./packages/core/styles/src"],
+      "@nimbus-ds/webpack": ["./packages/core/webpack/src"],
       "@nimbus-ds/badge": ["./packages/react/atomic/Badge/src"],
       "@nimbus-ds/box": ["./packages/react/atomic/Box/src"],
       "@nimbus-ds/button": ["./packages/react/atomic/Button/src"],
