--- a/packages/react/atomic/Badge/tsconfig.json
+++ b/packages/react/atomic/Badge/tsconfig.json
@@ -1,13 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
   "include": ["./src"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": false,
-    "paths": {
-      "@nimbus-ds/styles": ["../../../core/styles/src"],
-      "@nimbus-ds/skeleton": ["../Skeleton/src"],
-      "@nimbus-ds/text": ["../Text/src"]
-    }
-  }
+  "exclude": ["src/**/*.spec.tsx"]
 }
