--- a/packages/react/atomic/Spinner/package.json
+++ b/packages/react/atomic/Spinner/package.json
@@ -34,10 +34,7 @@
   },
   "devDependencies": {
     "@vanilla-extract/dynamic": "^2.0.2",
-    "terser-webpack-plugin": "^5.3.5",
-    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack": "^5.74.0"
   }
 }
