--- a/packages/react/atomic/Box/tsconfig.json
+++ b/packages/react/atomic/Box/tsconfig.json
@@ -1,12 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
   "include": ["./src"],
-  "exclude": ["src/**/*.spec.tsx", "src/**/*.stories.tsx"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": false,
-    "paths": {
-      "@nimbus-ds/styles": ["../../../core/styles/src"]
-    }
-  }
+  "exclude": ["src/**/*.spec.tsx"]
 }
