refactor: changed build build to consume inner package @nimbus-ds/webpack in component Button

--- a/packages/react/atomic/Button/tsconfig.json
+++ b/packages/react/atomic/Button/tsconfig.json
@@ -1,15 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
   "include": ["./src"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": false,
-    "paths": {
-      "@nimbus-ds/styles": ["../../../core/styles/src"],
-      "@nimbus-ds/badge": ["../Badge/src"],
-      "@nimbus-ds/icon": ["../Icon/src"],
-      "@nimbus-ds/skeleton": ["../Skeleton/src"],
-      "@nimbus-ds/spinner": ["../Spinner/src"]
-    }
-  }
+  "exclude": ["src/**/*.spec.tsx"]
 }
