--- a/packages/react/atomic/List/tsconfig.json
+++ b/packages/react/atomic/List/tsconfig.json
@@ -1,12 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
   "include": ["./src"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": false,
-    "paths": {
-      "@nimbus-ds/styles": ["../../../core/styles/src"],
-      "@nimbus-ds/skeleton": ["../Skeleton/src"]
-    }
-  }
+  "exclude": ["src/**/*.spec.tsx"]
 }
