refactor: changed build build to consume inner package @nimbus-ds/webpack in component Popover

--- a/packages/react/atomic/Popover/tsconfig.json
+++ b/packages/react/atomic/Popover/tsconfig.json
@@ -1,15 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
   "include": ["./src"],
-  "exclude": ["src/**/*.spec.tsx", "src/**/*.stories.tsx"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": false,
-    "paths": {
-      "@nimbus-ds/styles": ["../../../core/styles/src"],
-      "@nimbus-ds/button": ["../Button/src"],
-      "@nimbus-ds/stack": ["../Stack/src"],
-      "@nimbus-ds/text": ["../Text/src"]
-    }
-  }
+  "exclude": ["src/**/*.spec.tsx"]
 }
