refactor: changed build build to consume inner package @nimbus-ds/webpack in component Select

--- a/packages/react/atomic/Select/tsconfig.json
+++ b/packages/react/atomic/Select/tsconfig.json
@@ -1,12 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
-  "include": ["./src", "../../../index.d.ts"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": false,
-    "paths": {
-      "@nimbus-ds/styles": ["../../../core/styles/src"],
-      "@nimbus-ds/skeleton": ["../Skeleton/src"]
-    }
-  }
+  "include": ["./src", "../../../../index.d.ts"],
+  "exclude": ["src/**/*.spec.tsx"]
 }
