--- a/packages/react/atomic/Thumbnail/package.json
+++ b/packages/react/atomic/Thumbnail/package.json
@@ -13,7 +13,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "yarn build:types && webpack",
-    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ../../../",
+    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ./",
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
@@ -37,11 +37,7 @@
   },
   "devDependencies": {
     "@vanilla-extract/dynamic": "^2.0.2",
-    "@vanilla-extract/webpack-plugin": "^2.1.11",
-    "terser-webpack-plugin": "^5.3.5",
-    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack": "^5.74.0"
   }
 }
