--- a/packages/react/composite/Alert/package.json
+++ b/packages/react/composite/Alert/package.json
@@ -37,10 +37,7 @@
   },
   "devDependencies": {
     "@nimbus-ds/button": "workspace:*",
-    "terser-webpack-plugin": "^5.3.5",
-    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack": "^5.74.0"
   }
 }
