refactor: changed build build to consume inner package @nimbus-ds/webpack in component Card

--- a/packages/react/composite/Card/tsconfig.json
+++ b/packages/react/composite/Card/tsconfig.json
@@ -1,17 +1,5 @@
 {
   "extends": "../../../../tsconfig.json",
   "include": ["./src"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": false,
-    "paths": {
-      "@nimbus-ds/styles": ["../../../core/styles/src"],
-      "@nimbus-ds/tag": ["../../atomic/Tag/src"],
-      "@nimbus-ds/text": ["../../atomic/Text/src"],
-      "@nimbus-ds/title": ["../../atomic/Tilte/src"],
-      "@nimbus-ds/stack": ["../../atomic/Stack/src"],
-      "@nimbus-ds/box": ["../../atomic/Box/src"],
-      "@nimbus-ds/button": ["../../atomic/Button/src"]
-    }
-  }
+  "exclude": ["src/**/*.spec.tsx"]
 }
