refactor: changed build build to consume inner package @nimbus-ds/webpack in component Sidebar

--- a/packages/react/composite/Sidebar/package.json
+++ b/packages/react/composite/Sidebar/package.json
@@ -18,6 +18,7 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@floating-ui/react-dom-interactions": "^0.10.1",
     "@nimbus-ds/styles": "workspace:*",
     "@nimbus-ds/title": "workspace:*"
   },
