--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "@vanilla-extract/babel-plugin": "^1.1.7",
+    "@vanilla-extract/webpack-plugin": "^2.2.0",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -99,7 +100,7 @@
     "jest-svg-transformer": "^1.0.0",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
-    "mini-css-extract-plugin": "^2.7.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
