--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -2,10 +2,7 @@
   "name": "@nimbus-ds/styles",
   "version": "4.19.1",
   "license": "MIT",
-  "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.module.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md"
@@ -35,7 +32,9 @@
     "@vanilla-extract/sprinkles": "^1.5.1",
     "glob": "^8.0.3",
     "rainbow-sprinkles": "^0.14.0",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
