--- a/packages/core/webpack/package.json
+++ b/packages/core/webpack/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/webpack": "^5.28.0",
     "@vanilla-extract/webpack-plugin": "^2.2.0",
+    "dotenv": "^16.0.3",
     "mini-css-extract-plugin": "^2.7.2",
     "terser-webpack-plugin": "^5.3.6",
     "typescript": "^4.9.3",
