--- a/packages/react/atomic/Badge/package.json
+++ b/packages/react/atomic/Badge/package.json
@@ -2,9 +2,7 @@
   "name": "@nimbus-ds/badge",
   "version": "2.1.0",
   "license": "MIT",
-  "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.module.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
@@ -13,7 +11,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "yarn build:types && webpack",
-    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ../../../",
+    "build:types": "tsc --emitDeclarationOnly --declaration true --declarationDir ./dist --baseUrl ./",
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
@@ -36,6 +34,7 @@
   },
   "devDependencies": {
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.0.1"
   }
 }
