--- a/packages/react/atomic/Button/package.json
+++ b/packages/react/atomic/Button/package.json
@@ -2,10 +2,7 @@
   "name": "@nimbus-ds/button",
   "version": "1.1.0",
   "license": "MIT",
-  "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.module.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md"
@@ -39,6 +36,7 @@
     "@nimbus-ds/skeleton": "workspace:*",
     "@tiendanube/icons": "^0.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.0.1"
   }
 }
