--- a/packages/react/atomic/Radio/package.json
+++ b/packages/react/atomic/Radio/package.json
@@ -2,10 +2,7 @@
   "name": "@nimbus-ds/radio",
   "version": "1.0.1",
   "license": "MIT",
-  "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.module.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md"
@@ -36,6 +33,7 @@
   },
   "devDependencies": {
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.0.1"
   }
 }
