--- a/packages/react/atomic/Skeleton/package.json
+++ b/packages/react/atomic/Skeleton/package.json
@@ -2,10 +2,7 @@
   "name": "@nimbus-ds/skeleton",
   "version": "1.1.1",
   "license": "MIT",
-  "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.module.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md"
@@ -36,6 +33,7 @@
     "@nimbus-ds/webpack": "workspace:*",
     "@vanilla-extract/dynamic": "^2.0.2",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.0.1"
   }
 }
