--- a/packages/react/atomic/Title/package.json
+++ b/packages/react/atomic/Title/package.json
@@ -2,10 +2,7 @@
   "name": "@nimbus-ds/title",
   "version": "1.5.0",
   "license": "MIT",
-  "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.module.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md"
@@ -35,6 +32,7 @@
   },
   "devDependencies": {
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.0.1"
   }
 }
