--- a/packages/react/composite/Sidebar/package.json
+++ b/packages/react/composite/Sidebar/package.json
@@ -2,10 +2,7 @@
   "name": "@nimbus-ds/sidebar",
   "version": "1.2.0",
   "license": "MIT",
-  "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.module.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md"
@@ -40,6 +37,7 @@
     "@nimbus-ds/stack": "workspace:*",
     "@nimbus-ds/text": "workspace:*",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.0.1"
   }
 }
