--- a/package.json
+++ b/package.json
@@ -103,9 +103,11 @@
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "turbo": "^1.6.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack-cli": "^5.0.1"
   },
   "engines": {
     "node": ">=14.17 <=16.x",
