--- a/packages/react/atomic/Chip/package.json
+++ b/packages/react/atomic/Chip/package.json
@@ -35,7 +35,6 @@
   },
   "devDependencies": {
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.0.1"
+    "webpack": "^5.74.0"
   }
 }
