--- a/packages/react/atomic/FileUploader/package.json
+++ b/packages/react/atomic/FileUploader/package.json
@@ -36,7 +36,6 @@
   "devDependencies": {
     "@vanilla-extract/dynamic": "^2.0.2",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.0.1"
+    "webpack": "^5.74.0"
   }
 }
