--- a/packages/react/atomic/IconButton/package.json
+++ b/packages/react/atomic/IconButton/package.json
@@ -34,7 +34,6 @@
   "devDependencies": {
     "@tiendanube/icons": "^0.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.0.1"
+    "webpack": "^5.74.0"
   }
 }
