--- a/packages/react/atomic/Popover/package.json
+++ b/packages/react/atomic/Popover/package.json
@@ -35,7 +35,6 @@
     "@nimbus-ds/stack": "workspace:*",
     "@vanilla-extract/dynamic": "^2.0.2",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.0.1"
+    "webpack": "^5.74.0"
   }
 }
