--- a/packages/react/composite/Alert/package.json
+++ b/packages/react/composite/Alert/package.json
@@ -35,7 +35,6 @@
   "devDependencies": {
     "@nimbus-ds/button": "workspace:*",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.0.1"
+    "webpack": "^5.74.0"
   }
 }
