feat: created new package webpack for internal usage

--- a/.eslintrc
+++ b/.eslintrc
@@ -64,6 +64,7 @@
     "import/no-unresolved": "off",
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/triple-slash-reference": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       { "varsIgnorePattern": "^_" }
