--- a/packages/core/webpack/package.json
+++ b/packages/core/webpack/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@nimbus-ds/webpack",
-  "version": "0.0.0",
+  "version": "1.0.0-rc.6",
   "license": "MIT",
-  "source": "src/index.ts",
+  "main": "dist/index.js",
   "files": [
     "dist",
     "README.md"
@@ -24,6 +24,8 @@
     "terser-webpack-plugin": "^5.3.6",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
-    "webpack-merge": "^5.8.0"
-  }
+    "webpack-merge": "^5.8.0",
+    "webpack-shell-plugin-next": "^2.3.1"
+  },
+  "stableVersion": "0.0.0"
 }
