--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "5.0.0-rc.6",
+  "version": "5.0.0-rc.7",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -14,7 +14,7 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/tokens": "workspace:*"
+    "@nimbus-ds/tokens": "workspace:^"
   },
   "homepage": "https://nimbus.nuvemshop.com.br/documentation",
   "repository": {
@@ -25,7 +25,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/webpack": "workspace:*",
+    "@nimbus-ds/webpack": "workspace:^",
     "@types/glob": "^8",
     "@vanilla-extract/css": "^1.9.2",
     "@vanilla-extract/recipes": "^0.3.0",
