--- a/packages/react/src/atomic/Badge/package.json
+++ b/packages/react/src/atomic/Badge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/badge",
-  "version": "2.2.0-rc.5",
+  "version": "2.2.0-rc.6",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,9 +15,9 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*",
-    "@nimbus-ds/text": "workspace:*"
+    "@nimbus-ds/skeleton": "workspace:^",
+    "@nimbus-ds/styles": "workspace:^",
+    "@nimbus-ds/text": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -32,7 +32,6 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   },
   "stableVersion": "2.1.0"
