--- a/packages/react/src/atomic/Button/package.json
+++ b/packages/react/src/atomic/Button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/button",
-  "version": "1.2.0-rc.5",
+  "version": "1.2.0-rc.6",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -14,8 +14,8 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*"
+    "@nimbus-ds/skeleton": "workspace:^",
+    "@nimbus-ds/styles": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -30,11 +30,10 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/badge": "workspace:*",
-    "@nimbus-ds/icon": "workspace:*",
-    "@nimbus-ds/skeleton": "workspace:*",
+    "@nimbus-ds/badge": "workspace:^",
+    "@nimbus-ds/icon": "workspace:^",
+    "@nimbus-ds/skeleton": "workspace:^",
     "@tiendanube/icons": "^0.3.1",
-    "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   },
   "stableVersion": "1.1.0"
