--- a/packages/react/src/atomic/FileUploader/package.json
+++ b/packages/react/src/atomic/FileUploader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/file-uploader",
-  "version": "1.2.0-rc.5",
+  "version": "1.2.0-rc.6",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -14,10 +14,10 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/icon": "workspace:*",
-    "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*",
-    "@nimbus-ds/text": "workspace:*",
+    "@nimbus-ds/icon": "workspace:^",
+    "@nimbus-ds/skeleton": "workspace:^",
+    "@nimbus-ds/styles": "workspace:^",
+    "@nimbus-ds/text": "workspace:^",
     "@tiendanube/icons": "^0.3.1"
   },
   "peerDependencies": {
@@ -34,7 +34,6 @@
   },
   "devDependencies": {
     "@vanilla-extract/dynamic": "^2.0.2",
-    "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   },
   "stableVersion": "1.1.0"
