--- a/packages/react/src/atomic/Popover/package.json
+++ b/packages/react/src/atomic/Popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/popover",
-  "version": "1.3.0-rc.5",
+  "version": "1.3.0-rc.6",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom-interactions": "^0.10.1",
-    "@nimbus-ds/styles": "workspace:*"
+    "@nimbus-ds/styles": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -30,10 +30,9 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/box": "workspace:*",
-    "@nimbus-ds/stack": "workspace:*",
+    "@nimbus-ds/box": "workspace:^",
+    "@nimbus-ds/stack": "workspace:^",
     "@vanilla-extract/dynamic": "^2.0.2",
-    "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   },
   "stableVersion": "1.2.0"
