--- a/packages/react/src/atomic/Radio/package.json
+++ b/packages/react/src/atomic/Radio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/radio",
-  "version": "1.1.0-rc.5",
+  "version": "1.1.0-rc.6",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -14,9 +14,9 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*",
-    "@nimbus-ds/text": "workspace:*"
+    "@nimbus-ds/skeleton": "workspace:^",
+    "@nimbus-ds/styles": "workspace:^",
+    "@nimbus-ds/text": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -31,7 +31,6 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   },
   "stableVersion": "1.0.1"
