--- a/packages/react/src/atomic/Text/package.json
+++ b/packages/react/src/atomic/Text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/text",
-  "version": "4.3.0-rc.5",
+  "version": "4.3.0-rc.6",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -14,8 +14,8 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/skeleton": "workspace:*",
-    "@nimbus-ds/styles": "workspace:*"
+    "@nimbus-ds/skeleton": "workspace:^",
+    "@nimbus-ds/styles": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -30,7 +30,6 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   },
   "stableVersion": "4.2.0"
