--- a/packages/react/src/composite/Sidebar/package.json
+++ b/packages/react/src/composite/Sidebar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/sidebar",
-  "version": "1.3.0-rc.5",
+  "version": "1.3.0-rc.6",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@floating-ui/react-dom-interactions": "^0.10.1",
-    "@nimbus-ds/styles": "workspace:*",
-    "@nimbus-ds/title": "workspace:*"
+    "@nimbus-ds/styles": "workspace:^",
+    "@nimbus-ds/title": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -31,11 +31,10 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/box": "workspace:*",
-    "@nimbus-ds/button": "workspace:*",
-    "@nimbus-ds/stack": "workspace:*",
-    "@nimbus-ds/text": "workspace:*",
-    "typescript": "^4.7.4",
+    "@nimbus-ds/box": "workspace:^",
+    "@nimbus-ds/button": "workspace:^",
+    "@nimbus-ds/stack": "workspace:^",
+    "@nimbus-ds/text": "workspace:^",
     "webpack": "^5.74.0"
   },
   "stableVersion": "1.2.0"
