--- a/packages/react/src/composite/Tabs/package.json
+++ b/packages/react/src/composite/Tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/tabs",
-  "version": "1.1.0-rc.5",
+  "version": "1.1.0-rc.6",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -14,7 +14,7 @@
     "version": "yarn version"
   },
   "dependencies": {
-    "@nimbus-ds/styles": "workspace:*"
+    "@nimbus-ds/styles": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -30,7 +30,6 @@
   },
   "devDependencies": {
     "@vanilla-extract/dynamic": "^2.0.2",
-    "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   },
   "stableVersion": "1.0.0"
