--- a/packages/react/src/atomic/Radio/package.json
+++ b/packages/react/src/atomic/Radio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/radio",
-  "version": "1.1.0",
+  "version": "1.1.1-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "1.1.0"
 }
