--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "5.1.0",
+  "version": "5.2.0-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -34,5 +34,6 @@
     "rainbow-sprinkles": "^0.14.0",
     "ts-node": "^10.9.1",
     "webpack": "^5.75.0"
-  }
+  },
+  "stableVersion": "5.1.0"
 }
