--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/components",
-  "version": "1.0.2",
+  "version": "1.0.3-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,5 +31,6 @@
   },
   "devDependencies": {
     "webpack": "^5.75.0"
-  }
+  },
+  "stableVersion": "1.0.2"
 }
