--- a/packages/react/src/atomic/IconButton/package.json
+++ b/packages/react/src/atomic/IconButton/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/icon-button",
-  "version": "2.1.0",
+  "version": "2.1.1-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -33,5 +33,6 @@
   "devDependencies": {
     "@tiendanube/icons": "^0.3.1",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.1.0"
 }
