--- a/packages/react/src/atomic/Toast/package.json
+++ b/packages/react/src/atomic/Toast/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/toast",
-  "version": "1.5.0",
+  "version": "1.5.1-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -34,5 +34,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "1.5.0"
 }
