fix: fixed actions builds

--- a/.github/workflows/publish-codecov.yml
+++ b/.github/workflows/publish-codecov.yml
@@ -37,10 +37,8 @@ jobs:
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
         run: yarn
 
-      - name: Run build styles
-        run: |
-          export NODE_OPTIONS="--max_old_space_size=8192" 
-          yarn build:styles
+      - name: Run build tokens
+        run: yarn build:tokens
 
       - name: Run tests
         run: yarn test:ci
