--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,10 +30,8 @@ jobs:
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
         run: yarn
 
-      - name: Run build styles
-        run: |
-          export NODE_OPTIONS="--max_old_space_size=8192" 
-          npm run build:styles
+      - name: Run build tokens
+        run: npm run build:tokens
 
       - name: Run lint
         run: yarn lint
