feat: publish release

--- a/packages/react/src/atomic/Radio/package.json
+++ b/packages/react/src/atomic/Radio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/radio",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,6 +31,5 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "1.1.1"
+  }
 }
