--- a/packages/react/src/atomic/Icon/package.json
+++ b/packages/react/src/atomic/Icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/icon",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,6 +31,5 @@
   "devDependencies": {
     "@tiendanube/icons": "^0.3.1",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "1.6.0"
+  }
 }
