--- a/packages/react/src/atomic/IconButton/package.json
+++ b/packages/react/src/atomic/IconButton/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/icon-button",
-  "version": "3.0.0-rc.2",
+  "version": "3.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,6 +32,5 @@
   "devDependencies": {
     "@tiendanube/icons": "^0.3.1",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "2.1.1"
+  }
 }
