--- a/packages/react/src/atomic/Stack/package.json
+++ b/packages/react/src/atomic/Stack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/stack",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -29,6 +29,5 @@
     "@nimbus-ds/box": "workspace:^",
     "@vanilla-extract/dynamic": "^2.0.2",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "1.2.0"
+  }
 }
