--- a/packages/react/src/atomic/Tag/package.json
+++ b/packages/react/src/atomic/Tag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/tag",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,6 +32,5 @@
     "@nimbus-ds/text": "workspace:^",
     "@tiendanube/icons": "^0.3.1",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "1.4.0"
+  }
 }
