--- a/packages/react/src/composite/Card/package.json
+++ b/packages/react/src/composite/Card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/card",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -33,6 +33,5 @@
     "@nimbus-ds/tag": "workspace:^",
     "@nimbus-ds/text": "workspace:^",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "1.2.0"
+  }
 }
