chore: deprecated package @nimbus-ds/stack

--- a/packages/react/src/composite/Alert/package.json
+++ b/packages/react/src/composite/Alert/package.json
@@ -31,6 +31,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/box": "workspace:^",
     "@nimbus-ds/button": "workspace:^",
     "webpack": "^5.74.0"
   }
