chore: prepare versions

--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "6.9.0",
+  "version": "6.10.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
     "rainbow-sprinkles": "^0.14.0",
     "ts-node": "^10.9.1",
     "webpack": "^5.75.0"
-  }
+  },
+  "stableVersion": "6.9.0"
 }
